# IRS-CPP-Intern

./: README.md  a.out  test.cpp  test.sh  withoutfactory.cpp
Basics/: data_types.cpp  input_output.cpp  operators.cpp
C-training-main/WEEK2/: data.cpp  hello.i  loops.cpp  pointer  pointer.cpp
Classes_Objects/: basic_class.cpp
Control_Flow/: if_else.cpp  loops.cpp  switch_case.cpp
Data_Structures/: arrays_strings.cpp  stl_containers.cpp
Functions/: basic_functions.cpp  callback_functions.cpp  recursion.cpp
Itembasedwidgets/: mainwindow.cpp  mainwindow.ui
Makefile/: Makefile  main.cpp  math_utils.cpp  math_utils.h
OOP_Principles/: abstraction.cpp  encapsulation.cpp
Pointers/: pointers_basics.cpp
WEEK1/: hello.cpp
WEEK1/bashscript/: permission.sh
WEEK1/linux-practice/: renamecopy.txt
WEEK1/makefile-practical/: .add.cpp.swp  a.out  add.h  app  main.cpp  multiply.h
WEEK2/: Memory_Management  New_vs_Delete  New_vs_Delete.cpp  RAII.txt  a.out  data  data.cpp  fileio.cpp  filiowithstl.cpp  functions  functions.cpp  hello  hello.cpp  hello.s  loop  map.cpp  modifyingalgorithm.cpp  non  nonmodifyingalgo.cpp  pointer.cpp  set.cpp  stackvsheap  stackvsheap.cpp  students.txt
WEEK2/Multithreading/: .Thread_intro.cpp.swp  Thread_intro.cpp  a.out  conditionvar.cpp  locks.cpp
WEEK3/: .Json.cpp.swp  Json.cpp  Jsondemo.cpp  a.out  divide  divide.cpp  exceptions.cpp  fileio.cpp  json.cpp  json.txt  json_demo  primitive.cpp  school.db  sqlite.cpp  sqlite_crud  sqlitecrud.cpp  user.cpp
WEEK3/exceptions/: Bad_alloc.cpp  Domain_error.cpp  Invalid_argument.cpp  Overflow.cpp  Range_error.cpp  Runtime_error.cpp  Underflow.cpp  basicexception.cpp  exception.cpp
WEEK4/: Abstract.cpp  a.out  builder.cpp  factory.cpp  observer.cpp  prototype.cpp
WEEK4/Image_processing/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Week_1/: Calculator.sh  date.sh  if.sh  loop.sh  manish.sh
Widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
cronjob/: cpu_log.sh  cron_output.txt  test.sh
week1/: Script.sh  args.sh  exec1  exec1.c  exec2  exec2.c  fex1  fex1.c  functions.sh  ifelse.sh  loops.sh  temp  temp.c  temp1.sh  temp2  temp2.c
week2/: Constants  Constants.cpp  arrays  arrays.cpp  function.cpp  hello  hello.cpp  preProcceser_micros  preProcceser_micros.cpp
week_2/: Wordcount  Wordcount.cpp  hello  hello.cpp  menu  menu.cpp  opp.cpp  smart_ptr  smart_ptr.cpp
(+126 files in other folders)
